green-service.yml
kind: Service 
apiVersion: v1 
metadata:
    name: green-service 
spec:
    type: NodePort
    selector:
        app: green-app
    ports:
        - nodePort: 30167
          port: 3001
          targetPort: 3000
