red-app-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-red
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: red.abhi-k8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: red-service
          servicePort: 3002
